# arduino-rfid-5409

./: .gitignore  README.md  arduino-rfid-5409.code-workspace  requirements.txt
arduino/: platformio.ini
arduino/src/: main.cpp
client/: __main__.py  arduino.py  database.py  gui.py  pyproject.toml
