[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Jason Li <jasonli.0616@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyserial = "^3.5"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
